--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="bg-img">
         <nav>
-            <div class="logo">Lorem</div>
+            <div class="logo"><img src="./images/javascript-illustration.png" alt="logo image"></div>
             <ul>
                 <li>lorem</li>
                 <li>lorem</li>
