--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="./index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&family=Teko:wght@300&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="bg-img">
@@ -19,14 +23,16 @@
                 <li>lorem</li>
             </ul>
         </nav>
-        <h3>Hi there, I am Nasim</h3>
-        <h1>A passionate web developer</h1>
+        <div class="text-container">
+            <h1>Hi there, I am Nasim</h1>
+            <p class="description">A passionate web developer</p>
+        </div>
+        <div class="form-container">
         <form action="getInTouch">
-            <label for="email">Lets discuss the product developent</label>
-            <input type="email" name="email" class="email" placeholder="Please enter your email">
-            <button type="submit">CONTACT</button>
+            <label for="email">Lets discuss your product developent</label>
+            <input type="email" name="email" class="email" placeholder="Please enter your email"><button type="submit" value="CONTACT">CONTACT</button>
         </form>
-       
+    </div>
         
     </div>
 </body>
