--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
             <input type="email" name="email" class="email" placeholder="Please enter your email"><button type="submit" value="CONTACT">CONTACT</button>
         </form>
     </div>
-        
+    </div>
+    <div class="aboutme">
+        <h1>About Me</h1>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste sed repellat provident hic blanditiis dolores voluptatum. Laborum aliquid sed enim, aut accusantium voluptatem tempora ducimus! Laudantium exercitationem atque tempora nostrum.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum maiores sit numquam architecto necessitatibus sunt ab similique repudiandae voluptates quaerat odit, libero autem aut nulla doloribus itaque? Ad quam dolorem quas animi error magni maxime voluptatem sequi nisi. Voluptatem impedit ad accusamus ipsa recusandae cumque repudiandae similique optio quibusdam id.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque natus consequuntur perspiciatis dicta veniam, deleniti ut suscipit ducimus quasi optio sapiente, corporis ex fugit. Nihil tempora maiores quis excepturi possimus.</p>
     </div>
 </body>
 </html>
