--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&family=Teko:wght@300&display=swap" rel="stylesheet">
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/brands.min.css" integrity="sha512-rQgMaFKZKIoTKfYInSVMH1dSM68mmPYshaohG8pK17b+guRbSiMl9dDbd3Sd96voXZeGerRIFFr2ewIiusEUgg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="bg-img">
@@ -41,6 +41,11 @@
         </p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum maiores sit numquam architecto necessitatibus sunt ab similique repudiandae voluptates quaerat odit, libero autem aut nulla doloribus itaque? Ad quam dolorem quas animi error magni maxime voluptatem sequi nisi. Voluptatem impedit ad accusamus ipsa recusandae cumque repudiandae similique optio quibusdam id.</p>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque natus consequuntur perspiciatis dicta veniam, deleniti ut suscipit ducimus quasi optio sapiente, corporis ex fugit. Nihil tempora maiores quis excepturi possimus.</p>
+        <div class="icons-container">
+            <i class="fab fa-github-square"></i>
+            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-twitter-square"></i>
+        </div>
     </div>
 </body>
 </html>
