added preview buttonz

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <h2>Project Title</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
                 </div>
-                <button class="preview-bt">Preview</button>
+                <button class="preview-bt">PREVIEW</button>
             </div>
 
             <div class="project-card">
@@ -70,7 +70,7 @@
                     <h2>Project Title</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
                 </div>
-                <button class="preview-bt">Preview</button>
+                <button class="preview-bt">PREVIEW</button>
             </div>
 
             <div class="project-card">
@@ -78,7 +78,7 @@
                     <h2>Project Title</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
                 </div>
-                <button class="preview-bt">Preview</button>
+                <button class="preview-bt">PREVIEW</button>
             </div>
         </div>
     </div>
