--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div class="aboutme-container">
         <div class="aboutme">
-            <h1>About Me</h1>
+            <h1 class="aboutme-heading">About Me</h1>
             <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste sed repellat provident hic blanditiis dolores voluptatum. Laborum aliquid sed enim, aut accusantium voluptatem tempora ducimus! Laudantium exercitationem atque tempora nostrum.
             </p>
