--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 <body>
     <div class="bg-img">
         <nav>
-            <div class="logo"><img src="./images/javascript-illustration.png" alt="logo image"></div>
+            <div class="logo"><img src="./images/lpgo-removebg-preview.png" alt="logo image"></div>
             <ul>
                 <li class="contact">CONTACT ME</li>
-                <li>SKILLS</li>
                 <li>EXPERIENCE</li>
                 <li>PROJECTS</li>
+                <li>SKILLS</li>
                 <li>ABOUT ME</li>
             </ul>
         </nav>
         <div class="text-container">
-            <h1>Hi there, I am Nasim</h1>
+            <h1 class="name-heading">Hi there, I am Nasim</h1>
             <p class="description">A passionate web developer</p>
         </div>
         <div class="form-container">
