completed diff section

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="./index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&family=Teko:wght@300&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/brands.min.css" integrity="sha512-rQgMaFKZKIoTKfYInSVMH1dSM68mmPYshaohG8pK17b+guRbSiMl9dDbd3Sd96voXZeGerRIFFr2ewIiusEUgg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&family=Teko:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="bg-img">
@@ -94,36 +96,48 @@
         </div>
         <div class="diff-icons">
             <div class="icon">
-                <i class="fad fa-bullseye-arrow"></i>
-                <h2>Quick Lerner</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, ullam?</p>
+                <i class="fab fa-leanpub"></i>
+                <div>
+                    <h2>Quick Lerner</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, ullam?</p>
+                </div>
             </div>
             <div class="icon">
-                <i class="far fa-puzzle-piece"></i>
-                <h2>Problem Solving</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa, aspernatur?</p>
+                <i class="fas fa-puzzle-piece 2x"></i>
+                <div>
+                    <h2>Problem Solving</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa, aspernatur?</p>
+                </div> 
             </div>
             <div class="icon">
                 <i class="fas fa-align-left"></i>
-                <h2>Equiped Skill</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
+                <div>
+                    <h2>Equiped Skill</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
+                </div>
             </div>
         </div>
         <div class="diff-icons">
             <div class="icon">
                 <i class="fas fa-users"></i>
-                <h2>User Centric</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, ullam?</p>
+                <div>
+                    <h2>User Centric</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, ullam?</p>
+                </div>
             </div>
             <div class="icon">
-                <i class="far fa-search"></i>
-                <h2>Research Based</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa, aspernatur?</p>
+                <i class="fas fa-search"></i>
+                <div>
+                    <h2>Research Based</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa, aspernatur?</p>
+                </div>
             </div>
             <div class="icon">
-                <i class="fad fa-lightbulb-on"></i>
-                <h2>Disruptive</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
+                <i class="fas fa-compact-disc"></i>
+                <div>
+                    <h2>Disruptive</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
+                </div>
             </div>
         </div>
     </div>
