added experience section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </form>
         </div>
     </div>
-
+<!-- about me section -->
     <div class="aboutme-container">
         <div class="aboutme">
             <h1 class="aboutme-heading">About Me</h1>
@@ -51,6 +51,8 @@
                 dolores voluptatum. Laborum aliquid sed enim, aut accusantium voluptatem tempora ducimus! Laudantium
                 exercitationem atque tempora nostrum.
             </p>
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id harum soluta voluptates quas architecto incidunt! Est quos voluptatum id ad temporibus tempore similique tenetur suscipit neque architecto iusto, et ipsam illo commodi ullam rerum incidunt natus quasi, nobis adipisci veniam esse corporis. Unde impedit ab nostrum eum nobis itaque optio aliquam, porro dolor. Corrupti, iure iusto id consequuntur minus quisquam.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod error ea illum qui impedit, vitae, ullam inventore nulla obcaecati esse assumenda. Itaque, delectus a eum architecto nostrum ea totam omnis.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum maiores sit numquam architecto
                 necessitatibus sunt ab similique repudiandae voluptates quaerat odit, libero autem aut nulla doloribus
                 itaque? Ad quam dolorem quas animi error magni maxime voluptatem sequi nisi. Voluptatem impedit ad
@@ -62,7 +64,7 @@
             </div>
         </div>
     </div>
-
+<!-- project section -->
     <div class="myprojects">
         <h1 class="project-heading">My Projects</h1>
         <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat repudiandae
@@ -96,7 +98,7 @@
             </div>
         </div>
     </div>
-
+<!-- diff section -->
     <div class="diff-container">
         <div class="diff-heading-description">
             <h1 class="diff-heading">Why am I different</h1>
@@ -153,6 +155,7 @@
             </div>
         </div>
     </div>
+    <!-- skill section -->
     <div class="skill-section-container">
         <div class="skill-heading-description">
             <h1 class="skill-heading">My Skills</h1>
@@ -171,15 +174,31 @@
             </div>
             <h3>JavaScript</h3>
             <div class="container">
-                <div class="skill javascript">85%</div>
+                <div class="skill javascript">90%</div>
             </div>
             <h3>Java</h3>
             <div class="container">
-                <div class="skill java">65%</div>
+                <div class="skill java">70%</div>
             </div>
             <h3>SQL</h3>
             <div class="container">
-                <div class="skill sql">70%</div>
+                <div class="skill sql">80%</div>
+            </div>
+        </div>
+    </div>
+    <!-- experience section -->
+    <div class="experience-container">
+        <h1 class="experience-heading">My experience</h1>
+        <div class="experience">
+            <div class="column">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore ex iure blanditiis consectetur reiciendis consequatur cumque possimus omnis enim aspernatur porro, excepturi provident ab eaque nihil, error animi neque et!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit sint dolorum nemo maxime eius perferendis in perspiciatis doloremque possimus nulla, repudiandae magni neque animi, blanditiis iste aliquid ipsum laudantium voluptatibus?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non dolore asperiores, cupiditate odio maiores architecto, reprehenderit, ducimus voluptatum vel corrupti nisi vero cum inventore assumenda eveniet dicta pariatur incidunt quibusdam.</p>
+            </div>
+            <div class="column">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore ex iure blanditiis consectetur reiciendis consequatur cumque possimus omnis enim aspernatur porro, excepturi provident ab eaque nihil, error animi neque et!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit sint dolorum nemo maxime eius perferendis in perspiciatis doloremque possimus nulla, repudiandae magni neque animi, blanditiis iste aliquid ipsum laudantium voluptatibus?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non dolore asperiores, cupiditate odio maiores architecto, reprehenderit, ducimus voluptatum vel corrupti nisi vero cum inventore assumenda eveniet dicta pariatur incidunt quibusdam.</p>
             </div>
         </div>
     </div>
